service: add user api user total stats for issue: #120
